applier/build/5pi-home.jsonnet.test-args/monitoring/grafana/ingress.yaml
"apiVersion": "extensions/v1beta1"
"kind": "Ingress"
"metadata":
  "name": "grafana"
  "namespace": "monitoring"
"spec":
  "rules":
  - "host": "grafana.d.42o.de"
    "http":
      "paths":
      - "backend":
          "serviceName": "grafana"
          "servicePort": 3000
        "path": "/"
